--- a/quarto.css
+++ b/quarto.css
@@ -104,6 +104,7 @@ iframe {
 
 
 /* ############## Code Collection ############ */
+/* ##### Same Colors as with Example ######### */
 
 
 .my-code-collection {
@@ -136,8 +137,6 @@ iframe {
   background-color: white;
   border-bottom-right-radius: 10px;
 }
-
-/* ##############   Example   ############# */
 
 
 /* ##############   Example   ############# */
@@ -964,7 +963,9 @@ iframe {
 /* #############    Collection Code      ################ */
 /* ###################################################### */
 
-/* ##### lavenderblush 2 (#EEE0E5) and 4 (#8B8386) */
+/* ##### lavenderblush 2 (#EEE0E5) and 4 (#8B8386) ########  */
+/* ##### My own collection code with my own numbering '#col' */
+/* ##### Colors are not ideal, should be changed ##########  */
 
 .my-collection {
     margin-left: 0;
@@ -995,7 +996,7 @@ iframe {
     background-size: 40px;
     background-repeat: no-repeat;
     background-position: 15px center;
-    background-image: url("img/icons8/icons8-quellcode-64.png");
+    background-image: url("img/icons8/quellcode-64.png");
 }
 
 .my-collection-body {
